--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,12 @@
 ## Docs: http://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
+# material主题额外配置参数 
+language: zh-CN
+search:
+  path: /search.xml
+  field: post
+
 # Site
 title: 0031的个人空间
 subtitle: 涉世未深，不卑不亢
@@ -11,7 +17,7 @@ email: 0031git@gmail.com
 keywords: "java,maven,ssh,spring,struct,struts2,hibernate,前端,js,jquery,javascript,html5,技术宅,开发者,程序猿,程序媛,极客,编程,代码,开源,github,google,csdn,segmentfault,IT网站,Developer,Programmer,Coder,Geek,html,css,css3,用户体验"
 # URLs
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: //qxcwe.cn
+url: /
 root: /
 permalink: :year/:month/:day/:title/
 tag_dir: tags
@@ -75,6 +81,7 @@ disqus_shortname:
 #  - hexo-generator-feed
 #  - hexo-generator-baidu-sitemap
 #  - hexo-generator-sitemap
+
 theme: yilia
 exclude_generator:
 # Deployment
@@ -116,6 +123,11 @@ jsonContent:
     excerpt: false
     categories: false
     tags: true
+
+# Imgurl https://github.com/geekrainy/hexo-tag-imgurl
+# Important: This value starts without a protocol and it doesn't end with '/'.
+imgurl: http://images.qxcwe.cn
+# imgurl: false
 
 # 备案号与备案网址
 websiteRecordsNum: '渝ICP备16005990号'
