--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -83,7 +83,7 @@ friends:
   Litten: https://github.com/litten/
   逐梦博客: http://www.deanhan.cn/
 
-aboutme: 0031，<br>就读与于重交，无业游民。<br><br>热爱桌球与跑步，<br/>目前是一枚Java程序猿。<br/><br/>涉世未深，不卑不亢，<br>及时宜自勉，岁月不待人。
+aboutme: 0031，真名秦晓春，<br>就读与于重交，赛迪信息实习。<br><br>热爱桌球与跑步，<br/>目前是一枚Java程序猿。<br/><br/>涉世未深，不卑不亢，<br>及时宜自勉，岁月不待人。
 
 post:
   prev: '新篇'
